--- a/index.html
+++ b/index.html
@@ -46,37 +46,122 @@
 
 
       <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p>&lt;!doctype html&gt;
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+</p>
+  Antu's Model
+  
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+
+    <p>Drag to rotate the object. Scroll to zoom in/out</p>
+  
+  
+  
+  
+
+<p></p>
+
+<pre><code>// Set up the scene, camera, and renderer as global variables.
+var scene, camera, renderer;
+
+init();
+animate();
+
+function init() {
+
+  scene = new THREE.Scene();
+  var WIDTH = window.innerWidth,
+      HEIGHT = window.innerHeight;
+
+  renderer = new THREE.WebGLRenderer({antialias:true});
+  renderer.setSize(WIDTH, HEIGHT);
+  document.body.appendChild(renderer.domElement);
+
+  camera = new THREE.PerspectiveCamera(30, WIDTH / HEIGHT, 0.1, 20000);
+  camera.position.set(10, 10, 10);
+  scene.add(camera);
+
+  window.addEventListener('resize', function() {
+    var WIDTH = window.innerWidth,
+        HEIGHT = window.innerHeight;
+    renderer.setSize(WIDTH, HEIGHT);
+    camera.aspect = WIDTH / HEIGHT;
+    camera.updateProjectionMatrix();
+  });
+  renderer.setClearColor(0xCAFEBABE);
+  // renderer.setClearColorHex(0x333F47, 1);
+
+  var light = new THREE.PointLight(0xffffff);
+  // light.position.set(100, 200, 100);
+  scene.add(light);
+
+  var loader = new THREE.JSONLoader();
+  loader.load( "js/Middle.js", function(geometry){
+    var material = new THREE.MeshLambertMaterial({color: 0xDEADBEEF});
+    mesh = new THREE.Mesh(geometry, material);
+    scene.add(mesh);
+  });
+
+  controls = new THREE.OrbitControls(camera, renderer.domElement);
+
+  var gui = new DAT.GUI();
+  var guiControls = new function() {
+        this.meshX = 1;
+        this.meshY = 1;
+        this.meshZ = 1;
+        this.cameraX = 1;
+        this.cameraY = 1;
+        this.cameraZ = 1;
+        this.lightX = 1;
+        this.lightY = 1;
+        this.lightZ = 1;
+    }
+    gui.add(guiControls, 'meshX', 0, 100).onChange(function(e) {
+        mesh.scale.x = e;
+    });
+    gui.add(guiControls, 'meshY', 0, 100).onChange(function(e) {
+        mesh.scale.y = e;
+    });
+    gui.add(guiControls, 'meshZ', 0, 100).onChange(function(e) {
+        mesh.scale.z = e;
+    });
+    gui.add(guiControls, 'cameraX', 0, 100).onChange(function(e) {
+        camera.position.x = e;
+    });
+    gui.add(guiControls, 'cameraY', 0, 100).onChange(function(e) {
+        camera.position.y = e;
+    });
+    gui.add(guiControls, 'cameraZ', 0, 100).onChange(function(e) {
+        camera.position.z = e;
+    });
+    gui.add(guiControls, 'lightX', -100, 100).onChange(function(e) {
+        light.position.x = e;
+    });
+    gui.add(guiControls, 'lightY', -100, 100).onChange(function(e) {
+        light.position.y = e;
+    });
+    gui.add(guiControls, 'lightZ', -100, 100).onChange(function(e) {
+        light.position.z = e;
+    });
+}
+
+
+// Renders the scene and updates the render as needed.
+function animate() {
+
+  requestAnimationFrame(animate);
+
+  // Render the scene.
+  renderer.render(scene, camera);
+  controls.update();
+
+}
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>
+</p>
       </section>
 
       <footer>
